{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 47,
  "lineage": "c71ff043-ba93-07bc-792b-0febcd77cc34",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667573506753:vpc/vpc-004fa6b4d5ec3c428",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0380eec5407a51529",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0a8119ee2b4ba8fbc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004fa6b4d5ec3c428",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04654edb43e2f99f2",
            "owner_id": "667573506753"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667573506753:security-group/sg-02b4909df3ce708e4",
            "description": "Security group for Lambda to talk to ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b4909df3ce708e4",
            "ingress": [],
            "name": "generic-event-lambda-sg",
            "name_prefix": "",
            "owner_id": "667573506753",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004fa6b4d5ec3c428"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from ECS",
            "from_port": 5432,
            "id": "sgrule-553453808",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6d1c8fdb1ed24bf",
            "security_group_rule_id": "sgr-0129b3f53ed3969a4",
            "self": false,
            "source_security_group_id": "sg-02b4909df3ce708e4",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667573506753:vpc-endpoint/vpce-06b75d070e2fbe613",
            "dns_entry": [
              {
                "dns_name": "vpce-06b75d070e2fbe613-tw6adss6.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b75d070e2fbe613-tw6adss6-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b75d070e2fbe613-tw6adss6-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b75d070e2fbe613-tw6adss6-us-east-1e.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b75d070e2fbe613-tw6adss6-us-east-1c.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b75d070e2fbe613-tw6adss6-us-east-1f.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b75d070e2fbe613-tw6adss6-us-east-1d.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08469672YKFPW9JYTQCM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06b75d070e2fbe613",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05092981582dd7ada",
              "eni-0525c24b1bf28e32f",
              "eni-0bd93006d0b6259e3",
              "eni-0c2bddeb079f84cf2",
              "eni-0e35ffbc99ec3da39",
              "eni-0e5e1aa589c2f7847"
            ],
            "owner_id": "667573506753",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b4909df3ce708e4"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.25.197",
                "subnet_id": "subnet-09cdc640f54302877"
              },
              {
                "ipv4": "172.31.39.134",
                "subnet_id": "subnet-03fd41f39dc842953"
              },
              {
                "ipv4": "172.31.4.134",
                "subnet_id": "subnet-016c4ec6bc16bb873"
              },
              {
                "ipv4": "172.31.48.196",
                "subnet_id": "subnet-09866df99758761dd"
              },
              {
                "ipv4": "172.31.77.75",
                "subnet_id": "subnet-01cc1dae8ac1185a9"
              },
              {
                "ipv4": "172.31.95.232",
                "subnet_id": "subnet-0a5d90ca689bf05cc"
              }
            ],
            "subnet_ids": [
              "subnet-016c4ec6bc16bb873",
              "subnet-01cc1dae8ac1185a9",
              "subnet-03fd41f39dc842953",
              "subnet-09866df99758761dd",
              "subnet-09cdc640f54302877",
              "subnet-0a5d90ca689bf05cc"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-004fa6b4d5ec3c428"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}